changing config and about

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Rocío Valdebenito"
   avatar           : "profile.png"
   bio              : "PhD Student"
-  location         : "Illinois, USA."
+  location         : "Illinois, USA"
   employer         :
   pubmed           : 
   googlescholar    : "http://yourfullgooglescholarurl.com"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "rvaldebenito"
   google_plus      :
   keybase          :
   instagram        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "r_valdebenito"
   vine             :
   weibo            :
   xing             :
