--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Rocío Valdebenito"
-  avatar           : "117tmc_small.JPG"
+  avatar           : "117tmc_small2.JPG"
   bio              : "PhD Student"
   location         : "Illinois, USA"
   employer         :
