--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rocío Valdebenito"
   avatar           : "117tmc_small2.JPG"
-  bio              : "PhD Student"
+  bio              : "Ph.D. Candidate"
   location         : "Illinois, USA"
   employer         :
   pubmed           : 
