--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Rocío Valdebenito"
   avatar           : "117tmc_small2.JPG"
-  bio              : "Ph.D. Candidate"
-  location         : "Illinois, USA"
-  employer         :
+  bio              : "PhD Applied Economics. Assistant Professor"
+  location         : "Chile"
+  employer         : "Universidad Alberto Hurtado"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=wJ97QlsAAAAJ&hl=es"
   email            :
