--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Rocío Valdebenito"
+  name             : "Rocío Valdebenito, PhD"
   avatar           : "117tmc_small2.JPG"
-  bio              : "PhD Applied Economics. Assistant Professor"
+  bio              : "Assistant Professor, Economics"
   location         : "Chile"
   employer         : "Universidad Alberto Hurtado"
   pubmed           : 
